--- a/style.css
+++ b/style.css
@@ -2,10 +2,31 @@
     display: none;
 }
 
-.car {
+.car,
+.enemy {
     width: 50px;
     height: 100px;
     background-size: cover;
     background-repeat: no-repeat;
     background-image: url(./image/new-player.png);
+    position: absolute;
+    left: 125px;
+    bottom: 10px;
+}
+
+.gameArea {
+    width: 300px;
+    height: 100%;
+    position: relative;
+    margin: auto;
+    background: #222;
+    overflow: hidden;
+}
+
+.line {
+    position: absolute;
+    width: 10px;
+    height: 50px;
+    background: white;
+    left: 145px;
 }
